# HomeoRAG

./: 1_extract_pdf_contents.ipynb  2_semantic_similarity_table_rows_chunks.ipynb  3_chunking_strategies.ipynb  3_chunking_strategies_fixed_size.ipynb  4_chunking_strategies_sentence_based.ipynb  5_chunking_strategies_para_based.ipynb  6_1_semantic_chunking_custom.ipynb  6_2_semantic_chunking_custom.py  6_3_semantic_chunking_langchain.ipynb  7_multimodal_document_processing_unstructrued.ipynb  README.md  app.py  main.py  pyproject.toml  recursive_char_text_splitter_demo.ipynb
baai_bge_small_en_768_128/392654da-da29-4a08-be5a-32d091199baf/: index_metadata.pickle
biobert_768_128/b0f5e0ac-9180-46e8-94bd-1ccc4dfd6912/: index_metadata.pickle
biomed_pubmedbert_768_128/4297ceca-a4de-48ad-be83-6d40c65c7876/: index_metadata.pickle
chroma_db_store/e7b17d9c-e326-4b62-afb7-ed5885aee865/: index_metadata.pickle
data/: bm25_docs.pkl  boericke_materia_medica.txt  query_test_set.json  test_queries.json  test_queries_final.json  test_queries_final_ls.jsonl
e5_base_768_128/4129e5ac-55a6-4663-98a9-e09302708186/: index_metadata.pickle
pubmed_bert_ms_marco_chroma_1024_128/8d37bd2f-c2c7-40bd-8c6c-dbeb6f8d9710/: index_metadata.pickle
pubmed_bert_ms_marco_chroma_1024_256/bf41dd1c-3ace-4b1b-81d1-8a90ba11ac39/: index_metadata.pickle
pubmed_bert_ms_marco_chroma_256_32/: chroma.sqlite3
pubmed_bert_ms_marco_chroma_512_128/c9011e3a-c4d8-4db2-b672-35a159f5fcf6/: index_metadata.pickle
sapbert_768_128/cc6ba90e-a8f7-47e1-af35-c32b1257b1d3/: index_metadata.pickle
src/: bm25_store.py  chunker.py  config.py  env_constants.py  evaluate_retrieval.py  keyword_search.py  llm_response_generation.py  parser.py  query_tester.py  reranker.py  search.py  semantic_search.py  vector_indexer.py  vector_store.py
(+16 files in other folders)
