[project]
name = "homeorag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "langchain>=1.2.2",
    "langchain-experimental>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-text-splitters>=1.1.0",
    "llama-index>=0.14.12",
    "markdownify>=1.2.2",
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.8",
    "pi-heif>=1.1.1",
    "pymupdf>=1.26.7",
    "pypdf>=6.6.0",
    "rich>=14.2.0",
    "sentence-transformers>=5.2.0",
    "spacy>=3.8.11",
    "tqdm>=4.67.1",
    "unstructured[pdf]>=0.18.27",
]
